--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -15,61 +15,61 @@
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/switch-button.css") ?> />
     </head>
     <body>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <div class="container">
-                    <a class="navbar-brand" href="#">PampaBus</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container">
+                <a class="navbar-brand" href="<?= $this->baseUrl("") ?>">PampaBus</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="<?= $this->baseUrl("secretario") ?>">
-                                    <i class="fas fa-home"></i>
-                                    Início 
-                                    <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("onibus-urbano") ?>">
-                                    <i class="fas fa-bus-alt"></i>
-                                    Ônibus <u>U</u>rbanos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("onibus-intermunicipal") ?>">
-                                    <i class="fas fa-bus"></i>
-                                    Ônibus <u>I</u>ntermunicipais</a>
-                            </li>
-                        </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="<?= $this->baseUrl("secretario") ?>">
+                                <i class="fas fa-home"></i>
+                                Início 
+                                <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("onibus-urbano") ?>">
+                                <i class="fas fa-bus-alt"></i>
+                                Ônibus <u>U</u>rbanos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("onibus-intermunicipal") ?>">
+                                <i class="fas fa-bus"></i>
+                                Ônibus <u>I</u>ntermunicipais</a>
+                        </li>
+                    </ul>
 
-                        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" title="Conta PampaBus" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-user"></i>
-                                    Fulano
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Dados Pessoais</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Sair</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" title="Conta PampaBus" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-user"></i>
+                                Fulano
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Dados Pessoais</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Sair</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <!--Conteudo das páginas-->
-            <main style="margin-top: 1%;">
-                <?php echo $this->layout()->content; ?>
-            </main>
-            
-            
+        <!--Conteudo das páginas-->
+        <main style="margin-top: 1%;">
+            <?php echo $this->layout()->content; ?>
+        </main>
 
-            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
-            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
-            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
-            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
-            <?= $this->headScript(); ?>
+
+
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
+        <?= $this->headScript(); ?>
     </body>
 </html>
