Integração Rafael Mardegan, Branch 6 integrada!

--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -35,22 +35,17 @@
                                 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("/parada-onibus") ?>">
-                                Paradas
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("/tarifas") ?>">
+                            <a class="nav-link" href="<?= $this->baseUrl("tarifas") ?>">
                                 Tarifas
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("/concessaotrajeto") ?>">
+                            <a class="nav-link" href="<?= $this->baseUrl("trajeto") ?>">
                                 Trajeto
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("/concessaotrajeto") ?>">
+                            <a class="nav-link" href="<?= $this->baseUrl("concessaotrajeto") ?>">
                                 Concessões
                             </a>
                         </li>
