--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -40,6 +40,21 @@
                                 <i class="fas fa-bus"></i>
                                 Ônibus <u>I</u>ntermunicipais</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("cobrador") ?>">
+                                <i class="fas fa-user"></i>
+                                Cobradores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("motorista") ?>">
+                                <i class="fas fa-user"></i>
+                                Motoristas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("parada-onibus") ?>">
+                                <i class="fas fa-user"></i>
+                                Paradas</a>
+                        </li>
                     </ul>
 
                     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
